# qmlmirror

./: .gitignore  CMakeLists.txt  Calendar.qml  Clock.qml  JSONListModel.qml  Main.qml  MirrorText.qml  MirrorWindow.qml  Position.qml  QmlMirror.pro  QmlMirror.pro.user.3.2-pre1  QmlMirror.qml  QmlMirror.qmlproject  README.md  TaskWarrior.qml  Transport.qml  Transport.xcf  Weather.qml  lala.qml
weatherinfo/: CMakeLists.txt  WeatherIcon.qml  WeatherInfo.qml  appmodel.cpp  appmodel.h  images.qrc  qmldir  weatherinfo.pro  weatherplugin.cpp  weatherplugin.h
weatherinfo/components/: BigForecastIcon.qml  ForecastIcon.qml  WeatherIcon.qml
weatherinfo/icons/: weather-few-clouds.xcf  weather-fog.xcf  weather-haze.xcf  weather-icy.xcf  weather-overcast.xcf  weather-showers.xcf  weather-sleet.xcf  weather-snow.xcf  weather-storm.xcf  weather-sunny-very-few-clouds.xcf  weather-sunny.xcf  weather-thundershower.xcf
